--- a/config/crd/bases/network-simulator.patriot-framework.io_networks.yaml
+++ b/config/crd/bases/network-simulator.patriot-framework.io_networks.yaml
@@ -1,10 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.9.0
   creationTimestamp: null
   name: networks.network-simulator.patriot-framework.io
 spec:
@@ -61,6 +60,15 @@ spec:
                         description: NetworkPolicyPort describes a port to allow traffic
                           on
                         properties:
+                          endPort:
+                            description: If set, indicates that the range of ports
+                              from port to endPort, inclusive, should be allowed by
+                              the policy. This field cannot be defined if the port
+                              field is not defined or if the port field is defined
+                              as a named (string) port. The endPort must be equal
+                              or greater than port.
+                            format: int32
+                            type: integer
                           port:
                             anyOf:
                             - type: integer
@@ -68,7 +76,8 @@ spec:
                             description: The port on the given protocol. This can
                               either be a numerical or named port on a pod. If this
                               field is not provided, this matches all port names and
-                              numbers.
+                              numbers. If present, only traffic on the specified protocol
+                              AND port will be matched.
                             x-kubernetes-int-or-string: true
                           protocol:
                             default: TCP
@@ -101,6 +110,15 @@ spec:
                         description: NetworkPolicyPort describes a port to allow traffic
                           on
                         properties:
+                          endPort:
+                            description: If set, indicates that the range of ports
+                              from port to endPort, inclusive, should be allowed by
+                              the policy. This field cannot be defined if the port
+                              field is not defined or if the port field is defined
+                              as a named (string) port. The endPort must be equal
+                              or greater than port.
+                            format: int32
+                            type: integer
                           port:
                             anyOf:
                             - type: integer
@@ -108,7 +126,8 @@ spec:
                             description: The port on the given protocol. This can
                               either be a numerical or named port on a pod. If this
                               field is not provided, this matches all port names and
-                              numbers.
+                              numbers. If present, only traffic on the specified protocol
+                              AND port will be matched.
                             x-kubernetes-int-or-string: true
                           protocol:
                             default: TCP
@@ -131,9 +150,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
